# android-screen-to-chromecast

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android-ci.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/home/screen_to_chromecast/: MainActivity.kt
app/src/main/java/home/screen_to_chromecast/casting/: H264StreamInput.kt  HLSServer.kt  ScreenCastingService.kt
app/src/main/jni/: CMakeLists.txt  custom_media_input.cpp
app/src/main/res/drawable/: ic_stop_cast.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
docs/: initial-plan-by-gemini.md  libvlc-docs-3.6.2.xml
